Fixed committee page dark mode and moved styles to overrides.scss

--- a/_sass/overrides.scss
+++ b/_sass/overrides.scss
@@ -13,13 +13,8 @@
     float: right;
 }
 
-.card {
-    border-radius: 10px;
-    padding: .5em;
-}
-
 .committee-card-header {
-    margin: 0 0 1em 0;
+    margin-bottom: 1em;
 }
 
 .committee-image {
@@ -40,12 +35,4 @@
     font-weight: 500;
     color: grey;
     margin-left: 1em;
-}
-
-.instagram {
-    color: #833AB4;
-}
-
-.instagram:hover {
-    color: #C13584;
 }
